test/test_issues/test_i564/mod2.yang
module mod2 {
  yang-version 1.1;
  prefix bb;
  namespace "urn:mod2";

  leaf-list le1 {
    type string;
    max-elements 50;
    //min-elements 51; // error: bad value
  }

  list lst {
    key "name";
    leaf name {
      type string;
    }

    //max-elements 50;
    min-elements 51;
  }


}
